[project]
name = "ctrltest-mcp"
version = "0.1.0"
description = "Control-system analysis helpers for MCP services"
authors = [{ name = "CtrlTest MCP Maintainers" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119,<1.0",
    "pydantic>=2.11",
    "numpy>=1.26",
    "control>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6.7",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/Three-Little-Birds/ctrltest-mcp"
Repository = "https://github.com/Three-Little-Birds/ctrltest-mcp"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
